[package]
name = "genposttags"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.0", features = [ "derive" ] }
log = "^0.4"
flexi_logger = "^0.24"
indicatif = "^0.17"
toml = "^0.5"
chrono = "^0.4"
serde = "^1.0"
serde_derive = "^1.0"
futures = "^0.3"
tokio = { version = "^1.21", features = [ "full" ] }
sea-orm = { version = "^0.10", features = [ "sqlx-mysql", "runtime-tokio-native-tls", "macros" ] }
sea-query = { version = "^0.27", features = [ "derive", "thread-safe", "backend-mysql" ] }
regex = "^1.7"
